--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,9 @@
-.marquee {
-    overflow: hidden;
-    white-space: nowrap;
-  }
-  
-  .marquee-content {
-    display: inline-block;
-    padding-left: 100%;
-    animation: marquee 10s linear infinite;
-  }
-  
-  @keyframes marquee {
-    from {
-      transform: translateX(0%);
-    }
-    to {
-      transform: translateX(-100%);
-    }
-  }
+.icon-whatsapp {
+  color: white; /* color predeterminado del SVG */
+}
+
+.icon-whatsapp:hover {
+  color: #9b59b6; /* color morado */
+}
+
   
